--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -306,9 +306,9 @@ div.required .control-label:before {
 	}
 }
 /* content */
-#content {
+/*#content {
 	min-height: 600px;
-}
+}*/
 /* footer */
 
 /* alert */
